Added mixins rules and html header

--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>Weekend-Challenge-1-Pablo-and-Pau</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="header__inner">
+        <h1>Travelulu</h1>
+        <button>|||</button>
+      </div>
+    </header>
+  </body>
 </html>
