Changed font and border color in header h1

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="header">
       <div class="header__inner">
-        <h1>Travelulu</h1>
+        <h1 class="header__h1">Travelulu</h1>
         <button>|||</button>
       </div>
     </header>
