Adjusted border size and hamburguer icon size

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Weekend-Challenge-1-Pablo-and-Pau</title>
   </head>
@@ -10,7 +17,7 @@
     <header class="header">
       <div class="header__inner">
         <h1 class="header__h1">Travelulu</h1>
-        <button>|||</button>
+        <i class="fa-solid fa-bars fa-2xl"></i>
       </div>
     </header>
   </body>
