Linked favicon to html file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="shortcut icon"
+      href="https://www.iconpacks.net/icons/2/free-airplane-icon-1755-thumb.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Weekend-Challenge-1-Pablo-and-Pau</title>
   </head>
