Added section media

--- a/index.html
+++ b/index.html
@@ -20,5 +20,29 @@
         <i class="fa-solid fa-bars fa-2xl"></i>
       </div>
     </header>
+    <section class="section-media">
+      <div class="section-media__inner">
+        <h2 class="section-media__tittle">Search</h2>
+        <form action="">
+          <div>
+            <input type="text" class="section-media__first-input" />
+            <label for="">Destination/property</label>
+          </div>
+          <div>
+            <input type="text" class="section-media__second-input" />
+            <label for="">Check-in date</label>
+          </div>
+          <div>
+            <input type="text" class="section-media__third-input" />
+            <label for="">Check-out date</label>
+          </div>
+          <div>
+            <input type="text" class="section-media__fourth-input" />
+            <label for="">Travellers</label>
+          </div>
+          <button>SEARCH</button>
+        </form>
+      </div>
+    </section>
   </body>
 </html>
