Added html and basic style for first section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
         <i class="fa-solid fa-bars fa-2xl"></i>
       </div>
     </header>
+    <section class="section-top">
+      <div class="section-top__inner">
+        <h2>Find deals on hotels, homes and much more...</h2>
+        <form action="" class="section-top__form">
+          <input />
+          <input />
+          <input />
+          <button></button>
+        </form>
+      </div>
+    </section>
     <section class="section-media">
       <div class="section-media__inner">
         <h2 class="section-media__tittle">Search</h2>
