Early styling section media

--- a/index.html
+++ b/index.html
@@ -27,26 +27,29 @@
     </header>
     <section class="section-media">
       <div class="section-media__inner">
-        <h2 class="section-media__tittle">Search</h2>
-        <form action="">
-          <div>
-            <input type="text" class="section-media__first-input" />
-            <label for="">Destination/property</label>
-          </div>
-          <div>
-            <input type="text" class="section-media__second-input" />
-            <label for="">Check-in date</label>
-          </div>
-          <div>
-            <input type="text" class="section-media__third-input" />
-            <label for="">Check-out date</label>
-          </div>
-          <div>
-            <input type="text" class="section-media__fourth-input" />
-            <label for="">Travellers</label>
-          </div>
-          <button>SEARCH</button>
-        </form>
+        <div class="section-media__search-box">
+          <h2 class="section-media__tittle">Search</h2>
+          <form action="">
+            <div class="section-media__option-field">
+              <label for="">Destination/property</label>
+              <input type="text" class="section-media__first-input" />
+            </div>
+            <div class="section-media__option-field">
+              <label for="">Check-in date</label>
+              <input type="text" class="section-media__second-input" />
+            </div>
+            <div class="section-media__option-field">
+              <label for="">Check-out date</label>
+              <input type="text" class="section-media" />
+            </div>
+            <div class="section-media__option-field">
+              <label for="">Travellers</label>
+              <input type="text" class="section-media__fourth-input" />
+            </div>
+            <button>SEARCH</button>
+          </form>
+        </div>
+        <section class="section-media__show-results"></section>
       </div>
     </section>
   </body>
