First section early styling

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <section class="section-top">
       <div class="section-top__inner">
         <h2>Find deals on hotels, homes and much more...</h2>
-        <form action="" class="section-top__form">
-          <input />
-          <input />
-          <input />
+        <form class="section-top__form">
+          <input placeholder="Where are you going?" />
+          <input placeholder="Check-in - Check-out" />
+          <input placeholder="2 adults - 0 children" />
           <button></button>
         </form>
       </div>
