Added mixin for buttons

--- a/index.html
+++ b/index.html
@@ -29,10 +29,19 @@
       <div class="section-top__inner">
         <h2>Find deals on hotels, homes and much more...</h2>
         <form class="section-top__form">
-          <input placeholder="Where are you going?" />
-          <input placeholder="Check-in - Check-out" />
-          <input placeholder="2 adults - 0 children" />
-          <button></button>
+          <input
+            class="section-top__input"
+            placeholder="Where are you going?"
+          />
+          <input
+            class="section-top__input"
+            placeholder="Check-in - Check-out"
+          />
+          <input
+            class="section-top__input"
+            placeholder="2 adults - 0 children"
+          />
+          <button class="section-top__submit-button">Search</button>
         </form>
       </div>
     </section>
