Added mid section button

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <label for="">Travellers</label>
               <input type="text" class="section-media__field-to-complete" />
             </div>
-            <button>SEARCH</button>
+            <button id="section-media__input-button">SEARCH</button>
           </form>
         </div>
         <section class="section-media__show-results"></section>
