Prepared skeleton second section hhtml

--- a/index.html
+++ b/index.html
@@ -71,6 +71,20 @@
         </div>
         <section class="section-media__show-results"></section>
       </div>
+      <div>
+        <h2 class="sention-media__properties-found">254 Properties Found</h2>
+        <article>
+          <ol>
+            <img src="" alt="" />
+            <img src="" alt="" />
+            <h3></h3>
+            <p></p>
+            <a href=""></a>
+            <p></p>
+            <button></button>
+          </ol>
+        </article>
+      </div>
     </section>
   </body>
 </html>
