Add second section images text

--- a/index.html
+++ b/index.html
@@ -75,10 +75,12 @@
         <h2 class="sention-media__properties-found">254 Properties Found</h2>
         <article>
           <ol>
+            <img src="Images/chaletaso.png" alt="" />
             <img src="" alt="" />
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+            <h3>Estate de la Newcastle</h3>
+            <p>
+              Newcastle City Centre, Newcastle upon Tyne <br>0.1km from centre</br>
+            </p>
             <a href=""></a>
             <p></p>
             <button></button>
