Placeholders and for added

--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
           <h2 class="section-media__tittle">Search</h2>
           <form class="section-media__form">
             <div class="section-media__option-field">
-              <label for="">Destination/property</label>
-              <input type="text" class="section-media__field-to-complete" />
+              <label for="input-label_destination">Destination/property Name</label>
+              <input type="text" class="section-media__field-to-complete" placeholder="Gold Coast"/>
             </div>
             <div class="section-media__option-field">
-              <label for="">Check-in date</label>
-              <input type="text" class="section-media__field-to-complete" />
+              <label for="input-label-entrance">Check-in date</label>
+              <input type="text" class="section-media__field-to-complete" placeholder="Check in date"/>
             </div>
             <div class="section-media__option-field">
-              <label for="">Check-out date</label>
-              <input type="text" class="section-media__field-to-complete" />
+              <label for="input-label_entrance">Check-out date</label>
+              <input type="text" class="section-media__field-to-complete" placeholder="Check-in date"/>
             </div>
             <div class="section-media__option-field">
-              <label for="">Travellers</label>
-              <input type="text" class="section-media__field-to-complete" />
+              <label for="input-label_travellers">Travellers</label>
+              <input type="text" class="section-media__field-to-complete" placeholder="2 adults - 0 children"/>
             </div>
             <button class="section-media__input-button">SEARCH</button>
           </form>
@@ -74,16 +74,18 @@
       <div>
         <h2 class="sention-media__properties-found">254 Properties Found</h2>
         <article>
-          <ol>
-            <img src="Images/chaletaso.png" alt="" />
-            <img src="" alt="" />
-            <h3>Estate de la Newcastle</h3>
-            <p>
+          <ol class="First-research">
+            <li class="First-research__image-house"><img src="Images/chaletaso.png" alt="" /></li>
+            <li class="First-research__image-punctuation"><img src="" alt="" /></li>
+            <li class="First-research__location-general"><h3>Estate de la Newcastle</h3></li>
+            <li class="First-research__location-detail"><p>
               Newcastle City Centre, Newcastle upon Tyne <br>0.1km from centre</br>
-            </p>
-            <a href=""></a>
-            <p></p>
-            <button></button>
+            </p></li>
+            <li><a href=""></a></li>
+            <h4 class="First-research__show-on-map">Show on map</h4>
+            <li class="First-research__details"><p>Situated in Newcastle City Centre, Maldron Hotel features free WIFI and a private court yard.</p></li>
+            <li class="First-research__book-option"><button></button></li>
+            <hr>
           </ol>
         </article>
       </div>
