--- a/index.html
+++ b/index.html
@@ -75,8 +75,15 @@
         <h2 class="sention-media__properties-found">254 Properties Found</h2>
         <article>
           <ol class="First-research">
-            <li class="First-research__image-house"><img src="Images/chaletaso.png" alt="" /></li>
+            <li class="First-research__image-house"><img src="Images/chaletaso.png" alt="House first research" /></li>
             <li class="First-research__image-punctuation"><img src="" alt="" /></li>
+            <li><div>
+              <img src="Images/rating_star.png" alt="star">
+              <img src="Images/rating_star.png" alt="star">
+              <img src="Images/rating_star.png" alt="star">
+              <img src="Images/rating_star.png" alt="star">
+              <img src="Images/rating_star.png" alt="star>
+            </div></li>
             <li class="First-research__location-general"><h3>Estate de la Newcastle</h3></li>
             <li class="First-research__location-detail"><p>
               Newcastle City Centre, Newcastle upon Tyne <br>0.1km from centre</br>
@@ -84,7 +91,47 @@
             <li><a href=""></a></li>
             <h4 class="First-research__show-on-map">Show on map</h4>
             <li class="First-research__details"><p>Situated in Newcastle City Centre, Maldron Hotel features free WIFI and a private court yard.</p></li>
-            <li class="First-research__book-option"><button></button></li>
+            <li class="First-research__book-option"><button>Make a booking</button></li>
+            <hr>
+          </ol>
+        </article>
+         <article>
+          <ol class="First-research">
+            <li class="First-research__image-house"><img src="Images/chaletaso_long_pool.png" alt="House first research" /></li>
+            <li class="First-research__image-punctuation"><img src="" alt="" /></li>
+            <li><div>
+              <img src="Images/rating_star.png" alt="star">
+              <img src="Images/rating_star.png" alt="star">
+              <img src="Images/rating_star.png" alt="star">
+            </div></li>
+            <li class="First-research__location-general"><h3>Estate de la Newcastle</h3></li>
+            <li class="First-research__location-detail"><p>
+              Newcastle City Centre, Newcastle upon Tyne <br>0.1km from centre</br>
+            </p></li>
+            <li><a href=""></a></li>
+            <h4 class="First-research__show-on-map">Show on map</h4>
+            <li class="First-research__details"><p>Situated in Newcastle City Centre, Maldron Hotel features free WIFI and a private court yard.</p></li>
+            <li class="First-research__book-option"><button>Make a booking</button></li>
+            <hr>
+          </ol>
+        </article>
+         <article>
+          <ol class="First-research">
+            <li class="First-research__image-house"><img src="Images/chaletaso_short_pool.png" alt="House first research" /></li>
+            <li class="First-research__image-punctuation"><img src="" alt="" /></li>
+            <li><div>
+              <img src="Images/rating_star.png" alt="star">
+              <img src="Images/rating_star.png" alt="star">
+              <img src="Images/rating_star.png" alt="star">
+            </div></li>
+            <li class="First-research__location-general"><h3>Estate de la Newcastle</h3></li>
+            <li class="First-research__location-detail"><p>
+              Newcastle City Centre, Newcastle upon Tyne <br>0.1km from centre</br>
+            </p></li>
+            <li><a href=""></a></li>
+            <h4 class="First-research__show-on-map">Show on map</h4>
+            <li class="First-research__details"><p>Situated in Newcastle City Centre, Maldron Hotel features free WIFI and a private court yard.</p></li>
+            <li class="First-research__book-option"><button>Make a booking</button></li>
             <hr>
           </ol>
         </article>
