--- a/index.html
+++ b/index.html
@@ -137,5 +137,15 @@
         </article>
       </div>
     </section>
+    <section class="section-three">
+      <section class="section-three__inner">
+        <div class="section-three__green-box">
+          <p>Lock in a great price for your upcoming stay. Get instant confirmation with FREE cancellation on most rooms!</p>
+        </div>
+        <div class="section-three__red-box">
+          From 6 April 2022, your chosen cancellation policy will apply, regardless of Coronavirus. We recommend booking a free cancellation option in case your travel plans need to change.
+        </div>
+      </section>
+    </section>
   </body>
 </html>
