Adjusted boxes colors

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <p>Lock in a great price for your upcoming. Get instant confirmation with FREE cancellation on most rooms!</p>
         </div>
         <div class="section-three__red-box">
-          From 6 April 2022, your chosen cancellation policy will apply, regardless of Coronavirus. We recommend booking a free cancellation option in case your travel plans need to change.
+          <p>From 6 April 2022, your chosen cancellation policy will apply, regardless of Coronavirus. We recommend booking a free cancellation option in case your travel plans need to change.</p>
         </div>
       </section>
     </section>
