Added blue box to third section

--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
         <div class="section-three__red-box">
           <p>From 6 April 2022, your chosen cancellation policy will apply, regardless of Coronavirus. We recommend booking a free cancellation option in case your travel plans need to change.</p>
         </div>
+        <div class="section-three__blue-box">
+          <span>Need more information to get started?</span>
+        </div>
       </section>
     </section>
   </body>
