Added contact us button to blue box in third section

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
         </div>
         <div class="section-three__blue-box">
           <span>Need more information to get started?</span>
+          <button class="section-three__button">CONTACT US</button>
         </div>
       </section>
     </section>
