Redesign containers section media

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             <div class="section-media__option-field">
               <label for="input-label_entrance">Check-out date</label>
-              <input type="text" class="section-media__field-to-complete" placeholder="Check-in date"/>
+              <input type="text" class="section-media__field-to-complete" placeholder="Check-out date"/>
             </div>
             <div class="section-media__option-field">
               <label for="input-label_travellers">Travellers</label>
@@ -70,7 +70,7 @@
           </form>
         </div>
         <section class="section-media__show-results"></section>
-      </div>
+      
       <div>
         <h2 class="sention-media__properties-found">254 Properties Found</h2>
         <article>
@@ -91,7 +91,7 @@
             <li><a href=""></a></li>
             <h4 class="First-research__show-on-map">Show on map</h4>
             <li class="First-research__details"><p>Situated in Newcastle City Centre, Maldron Hotel features free WIFI and a private court yard.</p></li>
-            <li class="First-research__book-option"><button>Make a booking</button></li>
+            <li class="First-research__book-option"><button class="First-research__button-booking">Make a booking</button></li>
             <hr>
           </ol>
         </article>
@@ -111,7 +111,7 @@
             <li><a href=""></a></li>
             <h4 class="First-research__show-on-map">Show on map</h4>
             <li class="First-research__details"><p>Situated in Newcastle City Centre, Maldron Hotel features free WIFI and a private court yard.</p></li>
-            <li class="First-research__book-option"><button>Make a booking</button></li>
+            <li class="First-research__book-option"><button class="First-research__button-booking">Make a booking</button></li>
             <hr>
           </ol>
         </article>
@@ -131,10 +131,11 @@
             <li><a href=""></a></li>
             <h4 class="First-research__show-on-map">Show on map</h4>
             <li class="First-research__details"><p>Situated in Newcastle City Centre, Maldron Hotel features free WIFI and a private court yard.</p></li>
-            <li class="First-research__book-option"><button>Make a booking</button></li>
+            <li class="First-research__book-option"><button class="First-research__button-booking">Make a booking</button></li>
             <hr>
           </ol>
         </article>
+      </div>
       </div>
     </section>
   </body>
