--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
             <li class="First-research__image-house"><img src="Images/chaletaso.png" alt="House first research" /></li>
             <li class="First-research__image-punctuation"><img src="" alt="" /></li>
             <li><div>
-              <img src="Images/rating_star.png" alt="star">
-              <img src="Images/rating_star.png" alt="star">
-              <img src="Images/rating_star.png" alt="star">
-              <img src="Images/rating_star.png" alt="star">
-              <img src="Images/rating_star.png" alt="star>
+              <img src="Images/rating_star.png" class="star" alt="star">
+              <img src="Images/rating_star.png" class="star" alt="star">
+              <img src="Images/rating_star.png" class="star" alt="star">
+              <img src="Images/rating_star.png" class="star" alt="star">
+              <img src="Images/rating_star.png" class="star" alt="star>
             </div></li>
             <li class="First-research__location-general"><h3>Estate de la Newcastle</h3></li>
             <li class="First-research__location-detail"><p>
@@ -100,9 +100,9 @@
             <li class="First-research__image-house"><img src="Images/chaletaso_long_pool.png" alt="House first research" /></li>
             <li class="First-research__image-punctuation"><img src="" alt="" /></li>
             <li><div>
-              <img src="Images/rating_star.png" alt="star">
-              <img src="Images/rating_star.png" alt="star">
-              <img src="Images/rating_star.png" alt="star">
+              <img src="Images/rating_star.png" class="star" alt="star">
+              <img src="Images/rating_star.png" class="star" alt="star">
+              <img src="Images/rating_star.png" class="star" alt="star">
             </div></li>
             <li class="First-research__location-general"><h3>Estate de la Newcastle</h3></li>
             <li class="First-research__location-detail"><p>
@@ -120,9 +120,9 @@
             <li class="First-research__image-house"><img src="Images/chaletaso_short_pool.png" alt="House first research" /></li>
             <li class="First-research__image-punctuation"><img src="" alt="" /></li>
             <li><div>
-              <img src="Images/rating_star.png" alt="star">
-              <img src="Images/rating_star.png" alt="star">
-              <img src="Images/rating_star.png" alt="star">
+              <img src="Images/rating_star.png" class="star" alt="star">
+              <img src="Images/rating_star.png" class="star" alt="star">
+              <img src="Images/rating_star.png" class="star" alt="star">
             </div></li>
             <li class="First-research__location-general"><h3>Estate de la Newcastle</h3></li>
             <li class="First-research__location-detail"><p>
