Adjusting margins for section two in desktop and mobil

--- a/index.html
+++ b/index.html
@@ -72,13 +72,14 @@
             <button class="section-media__input-button">SEARCH</button>
           </form>
         </div>
-        <section class="section-media__show-results"></section>
+        <section class="section-media__show-results">
       
-      <div>
-        <h2 class="sention-media__properties-found">254 Properties Found</h2>
+     
+        <h2 class="section-media__properties-found">254 Properties Found</h2>
         <article>
           <ol class="First-research">
-            <li class="First-research__image-house"><img src="Images/chaletaso.png" alt="House first research" /></li>
+            <li class="First-research__image-house">
+              <img src="Images/chaletaso.png" alt="House first research" /></li>
             <li><div>
               <img src="Images/rating_star.png" class="star" alt="star">
               <img src="Images/rating_star.png" class="star" alt="star">
@@ -135,7 +136,7 @@
             <hr>
           </ol>
         </article>
-      </div>
+      </section>
       </div>
     </section>
     <section class="section-three">
