Skeleton section fourth html v movile

--- a/index.html
+++ b/index.html
@@ -154,6 +154,21 @@
           <button class="section-three__button">CONTACT US</button>
         </div>
       </section>
+      <section class="section-fourth">
+      <div class="summary-copyright">
+      <h2 class="summary-copyright__title">Travelulu</h2>
+      <p class="summary-copyright__summary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut dolores dolorem voluptatum libero necessitatibus culpa, sunt quo minus sint aperiam quia voluptatibus? Alias voluptate doloremque optio enim reprehenderit non commodi.</p>
+      <a class="summary-copyright__copyright">
+  Copyright 2021, All Rights Reserved.
+</a>
+      </div>
+      <div class="contact">
+        <h3 class="contact__title">Contact</h3>
+        <a href = "mailto: tavelulu@website.com">tavelulu@website.com</a>
+        <p class="contact__address">22 Street Address,, Suburb Address Main City, PO Box, Country</p>
+        <a href="tel:08-8888-88888">08-8888-88888</a>
+
+      </div>
     </section>
   </body>
 </html>
