section fourth fonts colors added

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </div>
       <div class="section-fourth-desktop">
         <div class="services">
-          <h3 class="services__title">services</h3>
+          <h3 class="services__title">Services</h3>
           <ul class="services__list">
            <li class="services__list__planning">Planning</li>
            <li class="services__list__financing">Financing</li>
