Got rid of li tags in article section

--- a/index.html
+++ b/index.html
@@ -73,68 +73,62 @@
           </form>
         </div>
         <section class="section-media__show-results">
-      
-     
         <h2 class="section-media__properties-found">254 Properties Found</h2>
-        <article>
-          <ol class="First-research">
-            <li class="First-research__image-house">
-              <img src="Images/chaletaso.png" alt="House first research" /></li>
-            <li><div>
+        <article class="First-research">
+            <div class="First-research__image-house">
+              <img src="Images/chaletaso.png" alt="House first research" />
+            </div>
+            <div>
               <img src="Images/rating_star.png" class="star" alt="star">
               <img src="Images/rating_star.png" class="star" alt="star">
               <img src="Images/rating_star.png" class="star" alt="star">
               <img src="Images/rating_star.png" class="star" alt="star">
-              <img src="Images/rating_star.png" class="star" alt="star>
-            </div></li>
-            <li class="First-research__location-general"><h3>Estate de la Newcastle</h3></li>
-            <li class="First-research__location-detail"><p>
+              <img src="Images/rating_star.png" class="star" alt="star">
+            </div>
+            <h3>Estate de la Newcastle</h3>
+            <p class="First-research__location-detail">
               Newcastle City Centre, Newcastle upon Tyne <br>0.1km from centre</br>
-            </p></li>
-            <li><a href=""></a></li>
+            </p>
             <h4 class="First-research__show-on-map">Show on map</h4>
-            <li class="First-research__details"><p>Situated in Newcastle City Centre, Maldron Hotel features free WIFI and a private court yard.</p></li>
-            <li class="First-research__book-option"><button class="First-research__button-booking">Make a booking</button></li>
+            <p class="First-research__details">Situated in Newcastle City Centre, Maldron Hotel features free WIFI and a private court yard.</p>
+            <button class="First-research__button-booking">Make a booking</button>
             <hr>
-          </ol>
         </article>
-         <article>
-          <ol class="First-research">
-            <li class="First-research__image-house"><img src="Images/chaletaso_long_pool.png" alt="House first research" /></li>
-            <li><div>
+        <article class="First-research">
+            <div class="First-research__image-house">
+              <img src="Images/chaletaso_long_pool.png" alt="House first research" />
+            </div>
+            <div>
               <img src="Images/rating_star.png" class="star" alt="star">
               <img src="Images/rating_star.png" class="star" alt="star">
               <img src="Images/rating_star.png" class="star" alt="star">
-            </div></li>
-            <li class="First-research__location-general"><h3>Estate de la Newcastle</h3></li>
-            <li class="First-research__location-detail"><p>
+            </div>
+            <h3 class="First-research__location-general">Estate de la Newcastle</h3>
+            <p class="First-research__location-detail">
               Newcastle City Centre, Newcastle upon Tyne <br>0.1km from centre</br>
-            </p></li>
-            <li><a href=""></a></li>
+            </p>
             <h4 class="First-research__show-on-map">Show on map</h4>
-            <li class="First-research__details"><p>Situated in Newcastle City Centre, Maldron Hotel features free WIFI and a private court yard.</p></li>
-            <li class="First-research__book-option"><button class="First-research__button-booking">Make a booking</button></li>
+            <p class="First-research__details">Situated in Newcastle City Centre, Maldron Hotel features free WIFI and a private court yard.</p>
+            <button class="First-research__button-booking">Make a booking</button>
             <hr>
-          </ol>
         </article>
-         <article>
-          <ol class="First-research">
-            <li class="First-research__image-house"><img src="Images/chaletaso_short_pool.png" alt="House first research" /></li>
-            <li><div>
+        <article class="First-research">
+            <div class="First-research__image-house">
+              <img src="Images/chaletaso_short_pool.png" alt="House first research" />
+            </div>
+            <div>
               <img src="Images/rating_star.png" class="star" alt="star">
               <img src="Images/rating_star.png" class="star" alt="star">
               <img src="Images/rating_star.png" class="star" alt="star">
-            </div></li>
-            <li class="First-research__location-general"><h3>Estate de la Newcastle</h3></li>
-            <li class="First-research__location-detail"><p>
+            </div>
+            <h3 class="First-research__location-general">Estate de la Newcastle</h3>
+            <p class="First-research__location-detail">
               Newcastle City Centre, Newcastle upon Tyne <br>0.1km from centre</br>
-            </p></li>
-            <li><a href=""></a></li>
+            </p>
             <h4 class="First-research__show-on-map">Show on map</h4>
-            <li class="First-research__details"><p>Situated in Newcastle City Centre, Maldron Hotel features free WIFI and a private court yard.</p></li>
-            <li class="First-research__book-option"><button class="First-research__button-booking">Make a booking</button></li>
+            <p class="First-research__details">Situated in Newcastle City Centre, Maldron Hotel features free WIFI and a private court yard.</p>
+            <button class="First-research__button-booking">Make a booking</button>
             <hr>
-          </ol>
         </article>
       </section>
       </div>
