Added wrap to text in article for the flex-direction

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <div class="First-research__image-house">
               <img src="Images/chaletaso.png" alt="House first research" />
             </div>
+            <div class="First-research__text-wrap">
             <div>
               <img src="Images/rating_star.png" class="star" alt="star">
               <img src="Images/rating_star.png" class="star" alt="star">
@@ -92,12 +93,13 @@
             <h4 class="First-research__show-on-map">Show on map</h4>
             <p class="First-research__details">Situated in Newcastle City Centre, Maldron Hotel features free WIFI and a private court yard.</p>
             <button class="First-research__button-booking">Make a booking</button>
-            <hr>
+            </div>
         </article>
         <article class="First-research">
             <div class="First-research__image-house">
               <img src="Images/chaletaso_long_pool.png" alt="House first research" />
             </div>
+            <div class="First-research__text-wrap">
             <div>
               <img src="Images/rating_star.png" class="star" alt="star">
               <img src="Images/rating_star.png" class="star" alt="star">
@@ -110,12 +112,13 @@
             <h4 class="First-research__show-on-map">Show on map</h4>
             <p class="First-research__details">Situated in Newcastle City Centre, Maldron Hotel features free WIFI and a private court yard.</p>
             <button class="First-research__button-booking">Make a booking</button>
-            <hr>
+            </div>
         </article>
         <article class="First-research">
             <div class="First-research__image-house">
               <img src="Images/chaletaso_short_pool.png" alt="House first research" />
             </div>
+            <div class="First-research__text-wrap">
             <div>
               <img src="Images/rating_star.png" class="star" alt="star">
               <img src="Images/rating_star.png" class="star" alt="star">
@@ -128,7 +131,7 @@
             <h4 class="First-research__show-on-map">Show on map</h4>
             <p class="First-research__details">Situated in Newcastle City Centre, Maldron Hotel features free WIFI and a private court yard.</p>
             <button class="First-research__button-booking">Make a booking</button>
-            <hr>
+            </div>
         </article>
       </section>
       </div>
