Applied flex dir to article for desktop and styled a bit

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
             </div>
             <div class="First-research__text-wrap">
             <div>
-              <img src="Images/rating_star.png" class="star" alt="star">
-              <img src="Images/rating_star.png" class="star" alt="star">
-              <img src="Images/rating_star.png" class="star" alt="star">
-              <img src="Images/rating_star.png" class="star" alt="star">
-              <img src="Images/rating_star.png" class="star" alt="star">
+              <img src="Images/rating_star.png" class="First-research__star" alt="star">
+              <img src="Images/rating_star.png" class="First-research__star" alt="star">
+              <img src="Images/rating_star.png" class="First-research__star" alt="star">
+              <img src="Images/rating_star.png" class="First-research__star" alt="star">
+              <img src="Images/rating_star.png" class="First-research__star" alt="star">
             </div>
             <h3>Estate de la Newcastle</h3>
             <p class="First-research__location-detail">
@@ -101,9 +101,9 @@
             </div>
             <div class="First-research__text-wrap">
             <div>
-              <img src="Images/rating_star.png" class="star" alt="star">
-              <img src="Images/rating_star.png" class="star" alt="star">
-              <img src="Images/rating_star.png" class="star" alt="star">
+              <img src="Images/rating_star.png" class="First-research__star" alt="star">
+              <img src="Images/rating_star.png" class="First-research__star" alt="star">
+              <img src="Images/rating_star.png" class="First-research__star" alt="star">
             </div>
             <h3 class="First-research__location-general">Estate de la Newcastle</h3>
             <p class="First-research__location-detail">
@@ -120,9 +120,9 @@
             </div>
             <div class="First-research__text-wrap">
             <div>
-              <img src="Images/rating_star.png" class="star" alt="star">
-              <img src="Images/rating_star.png" class="star" alt="star">
-              <img src="Images/rating_star.png" class="star" alt="star">
+              <img src="Images/rating_star.png" class="First-research__star" alt="star">
+              <img src="Images/rating_star.png" class="First-research__star" alt="star">
+              <img src="Images/rating_star.png" class="First-research__star" alt="star">
             </div>
             <h3 class="First-research__location-general">Estate de la Newcastle</h3>
             <p class="First-research__location-detail">
