Centered text and fixed margins

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
     </section>
   </section>
   <section class="section-fourth">
+    <section class="section-fourth__inner">
     <div class="summary-copyright">
       <h2 class="summary-copyright__title">Travelulu</h2>
       <p class="summary-copyright__summary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut dolores dolorem
@@ -154,7 +155,6 @@
         Copyright 2021, All Rights Reserved.
       </a>
     </div>
-  
       <div class="services">
         <h3 class="services__title">Services</h3>
         <ul class="services__list">
@@ -183,6 +183,7 @@
       <p class="contact__address">22 Street Address,, Suburb Address Main City, PO Box, Country</p>
       <a href="tel:08-8888-88888">08-8888-88888</a>
     </div>
+    </section>
   </section>
 
 </body>
