Fixed some html errors

--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
         <h2 class="section-media__tittle">Search</h2>
         <form class="section-media__form">
           <div class="section-media__option-field">
-            <label for="input-label_destination">Destination/property Name</label>
-            <input type="text" class="section-media__field-to-complete" placeholder="Gold Coast" />
+            <label for="dest">Destination/property Name</label>
+            <input type="text" class="section-media__field-to-complete" placeholder="Gold Coast" id="dest"/>
           </div>
           <div class="section-media__option-field">
-            <label for="input-label-entrance">Check-in date</label>
-            <input type="text" class="section-media__field-to-complete" placeholder="Check in date" />
+            <label for="in">Check-in date</label>
+            <input type="text" class="section-media__field-to-complete" placeholder="Check in date" id="in"/>
           </div>
           <div class="section-media__option-field">
-            <label for="input-label_entrance">Check-out date</label>
-            <input type="text" class="section-media__field-to-complete" placeholder="Check-out date" />
+            <label for="out">Check-out date</label>
+            <input type="text" class="section-media__field-to-complete" placeholder="Check-out date" id="out"/>
           </div>
           <div class="section-media__option-field">
-            <label for="input-label_travellers">Travellers</label>
-            <input type="text" class="section-media__field-to-complete" placeholder="2 adults - 0 children" />
+            <label for="type">Travellers</label>
+            <input type="text" class="section-media__field-to-complete" placeholder="2 adults - 0 children" id="type" />
           </div>
           <button class="section-media__input-button">SEARCH</button>
         </form>
@@ -74,7 +74,7 @@
             </div>
             <h3>Estate de la Newcastle</h3>
             <p class="First-research__location-detail">
-              Newcastle City Centre, Newcastle upon Tyne <br>0.1km from centre</br>
+              Newcastle City Centre, Newcastle upon Tyne <br>0.1km from centre<br>
             </p>
             <h4 class="First-research__show-on-map">Show on map</h4>
             <p class="First-research__details">Situated in Newcastle City Centre, Maldron Hotel features free WIFI and a
@@ -94,7 +94,7 @@
             </div>
             <h3 class="First-research__location-general">Estate de la Newcastle</h3>
             <p class="First-research__location-detail">
-              Newcastle City Centre, Newcastle upon Tyne <br>0.1km from centre</br>
+              Newcastle City Centre, Newcastle upon Tyne <br>0.1km from centre<br>
             </p>
             <h4 class="First-research__show-on-map">Show on map</h4>
             <p class="First-research__details">Situated in Newcastle City Centre, Maldron Hotel features free WIFI and a
@@ -179,7 +179,7 @@
 
     <div class="contact">
       <h3 class="contact__title">Contact</h3>
-      <a href="mailto: tavelulu@website.com">tavelulu@website.com</a>
+      <a href="mailto:tavelulu@website.com">tavelulu@website.com</a>
       <p class="contact__address">22 Street Address,, Suburb Address Main City, PO Box, Country</p>
       <a href="tel:08-8888-88888">08-8888-88888</a>
     </div>
